sadzenie marchewki, wyświetlanie stanu ogrodu

--- a/TODO
+++ b/TODO
@@ -1,18 +1,18 @@
 # TODO list
 
-[] usunąć inne uruchamiania (eden jest głównym plikiem)
+[x] usunąć inne uruchamiania (eden jest głównym plikiem)
 
-[] zrobić rośnięcie (gdy mija czas - czekam dzień (tura)) - funkcja czekaj
+[] zrobić rośnięcie (gdy mija czas - czekam dzień (tura)) [x/] dodać przybieranie na wadze w zależności od wilgotności)
 
 [] mówić z poziomu konsoli co robi eden:
         - czekaj (ile dni)
-        - zasadź i gdzie
+        - zasadź [x]
         - podlewanie
         - losowa pogoda
         - wyczyść wszystko
         - wyjdź
         - metryczka rośliny albo wyświetlanie parametrów (wypisanie w konsoli)
-
+        - metryczka ogrodu [x]
 [] zrobienie innej rośliny (pomidor)
 
 [] dopracowanie rośliny (kiedy umiera, jaka wilgotność, kiedy zbiór)
